k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskir
  labels:
    name: taskir
    environment: production
